--- a/rpm/PresagePredictor.yaml
+++ b/rpm/PresagePredictor.yaml
@@ -1,10 +1,10 @@
-Name: PresagePredictor
+Name: presage_predictor
 Summary: PresagePredictor
 Version: 1.0
 Release: 1
 # The contents of the Group field should be one of the groups listed here:
 # http://gitorious.org/meego-developer-tools/spectacle/blobs/master/data/GROUPS
-Group: Qt/Qt
+Group: Applications/Text
 URL: http://example.org/
 License: LICENSE
 # This must be generated before uploading a package to a remote build service.
@@ -33,6 +33,8 @@ PkgBR:
 Requires:
   - sailfishsilica-qt5 >= 0.10.9 
   - jolla-keyboard
+  - libpresage1
+  - presage-data
 
 # All installed files
 Files:
