--- a/rpm/presage_predictor.yaml
+++ b/rpm/presage_predictor.yaml
@@ -1,7 +1,7 @@
 Name: presage_predictor
 Summary: PresagePredictor
 Version: 1.0
-Release: 1
+Release: 4
 # The contents of the Group field should be one of the groups listed here:
 # http://gitorious.org/meego-developer-tools/spectacle/blobs/master/data/GROUPS
 Group: Applications/Text
@@ -24,6 +24,7 @@ PkgConfigBR:
   - Qt5Core
   - Qt5Qml
   - Qt5Quick
+  - Qt5DBus
 
 # Build dependencies without a pkgconfig setup can be listed here
 PkgBR:
