--- a/rpm/presage_predictor.yaml
+++ b/rpm/presage_predictor.yaml
@@ -25,6 +25,7 @@ PkgConfigBR:
   - Qt5Qml
   - Qt5Quick
   - Qt5DBus
+  - sqlite3
 
 # Build dependencies without a pkgconfig setup can be listed here
 PkgBR:
