--- a/rpm/presage_predictor.yaml
+++ b/rpm/presage_predictor.yaml
@@ -30,6 +30,7 @@ PkgConfigBR:
 # Build dependencies without a pkgconfig setup can be listed here
 PkgBR:
   - libpresage-devel
+  - libmarisa-devel
 
 # Runtime dependencies which are not automatically detected
 Requires:
