add default presage config and database; obsoletes presage-data

--- a/rpm/maliit-plugin-presage.yaml
+++ b/rpm/maliit-plugin-presage.yaml
@@ -36,6 +36,8 @@ PkgBR:
 Requires:
   - sailfishsilica-qt5 >= 0.10.9 
   - jolla-keyboard
+
+Obsoletes:
   - presage-data
 
 # All installed files
@@ -43,6 +45,8 @@ Files:
   - '%{_libdir}/qt5/qml/hu/mm/presagepredictor/libPresagePredictor.so'
   - '%{_libdir}/qt5/qml/hu/mm/presagepredictor/qmldir'
   - '%{_datadir}/maliit/plugins/com/jolla/PresageInputHandler.qml'
+  - '%{_datadir}/presage/database_empty'
+  - '%{_sysconfdir}/presage.xml'
 
 # For more information about yaml and what's supported in Sailfish OS
 # build system, please see https://wiki.merproject.org/wiki/Spectacle
